--- a/AirQualityApp/src/main/resources/org/application/bwp/airqualityapp/airCondition/air-stats.fxml
+++ b/AirQualityApp/src/main/resources/org/application/bwp/airqualityapp/airCondition/air-stats.fxml
@@ -18,7 +18,7 @@
          <content>
             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #111111;">
                <children>
-                  <TableView fx:id="stationTable" layoutX="-5.0" prefHeight="706.0" prefWidth="423.0">
+                  <TableView fx:id="stationTable" layoutX="-1.0" prefHeight="706.0" prefWidth="419.0">
                      <columns>
                         <TableColumn fx:id="sensorIdTable" prefWidth="75.0" text="Sensor id" />
                         <TableColumn fx:id="paramNameTable" prefWidth="75.0" text="Param name" />
@@ -48,7 +48,10 @@
                <children>
                   <LineChart fx:id="paramChart" layoutY="112.0" legendSide="LEFT" prefHeight="592.0" prefWidth="664.0" title="Param chart">
                     <xAxis>
-                      <CategoryAxis prefHeight="93.0" prefWidth="598.0" side="BOTTOM" style="-fx-background-color: #3a6131;" tickLabelFill="#111111" />
+                      <CategoryAxis prefHeight="93.0" prefWidth="598.0" side="BOTTOM" style="-fx-background-color: #3a6131;" tickLabelFill="#111111">
+                           <tickLabelFont>
+                              <Font size="10.0" />
+                           </tickLabelFont></CategoryAxis>
                     </xAxis>
                     <yAxis>
                       <NumberAxis prefHeight="515.0" prefWidth="36.0" side="LEFT" style="-fx-background-color: #3a6131;" tickLabelFill="#111111" />
