--- a/RentalSkiEquCRUD/src/main/resources/org/application/bwp/rentalskiequcrud/guiPages/manager/manager-main-page.fxml
+++ b/RentalSkiEquCRUD/src/main/resources/org/application/bwp/rentalskiequcrud/guiPages/manager/manager-main-page.fxml
@@ -18,17 +18,17 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="697.0" prefWidth="1078.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.application.bwp.rentalskiequcrud.gui.menager.MenagerMainPageController">
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="697.0" prefWidth="1078.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.application.bwp.rentalskiequcrud.gui.manager.ManagerMainPageController">
   <tabs>
       <Tab text="Zarządznie bazą danych">
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
-                  <Button fx:id="initDbButton" layoutX="59.0" layoutY="75.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="197.0" text="Inizjalizuj bazę danych" />
-                  <Button fx:id="saveDbButton" layoutX="59.0" layoutY="257.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="197.0" text="Zapisz aktualny stan bazy danych" />
-                  <Button fx:id="dropBbButton" layoutX="59.0" layoutY="357.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="197.0" text="Wyłącz bazę" />
-                  <Button fx:id="loadSaveDbButton" layoutX="59.0" layoutY="162.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="197.0" text="Wczytaj zapisaną bazę" />
-                  <ImageView fx:id="logoImageView" fitHeight="630.0" fitWidth="763.0" layoutX="283.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true" />
+                  <Button fx:id="initDbButton" layoutX="59.0" layoutY="75.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="233.0" text="Inizjalizuj bazę danych" />
+                  <Button fx:id="saveDbButton" layoutX="59.0" layoutY="257.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="236.0" text="Zapisz aktualny stan bazy" />
+                  <Button fx:id="dropBbButton" layoutX="59.0" layoutY="357.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="237.0" text="Wyłącz bazę" />
+                  <Button fx:id="loadSaveDbButton" layoutX="59.0" layoutY="162.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="233.0" text="Wczytaj zapisaną bazę" />
+                  <ImageView fx:id="logoImageView" fitHeight="630.0" fitWidth="711.0" layoutX="335.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true" />
                </children>
             </AnchorPane>
         </content>
@@ -143,9 +143,9 @@
                   <TableView fx:id="magazineTable" prefHeight="667.0" prefWidth="575.0">
                     <columns>
                       <TableColumn fx:id="equIdTable" prefWidth="75.0" text="ID sprzętu" />
-                      <TableColumn fx:id="equRodzajTable" prefWidth="75.0" text="Rodzaj " />
-                        <TableColumn fx:id="equStatusTable" prefWidth="75.0" text="Stan magazynowy" />
-                        <TableColumn fx:id="skiEquDimTable" prefWidth="75.0" text="Długość" />
+                      <TableColumn fx:id="equRodzajTable" prefWidth="214.0" text="Rodzaj " />
+                        <TableColumn fx:id="equStatusTable" prefWidth="179.0" text="Stan magazynowy" />
+                        <TableColumn fx:id="skiEquDimTable" prefWidth="82.0" text="Długość" />
                     </columns>
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -266,7 +266,7 @@
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
-                  <TableView fx:id="reservationTable" prefHeight="668.0" prefWidth="565.0">
+                  <TableView fx:id="reservationTable" prefHeight="668.0" prefWidth="597.0">
                     <columns>
                       <TableColumn fx:id="reservationIdTable" prefWidth="59.0" text="ID Zam." />
                       <TableColumn fx:id="resevationEquIdTable" prefWidth="66.0" text="ID Sprzętu" />
@@ -280,7 +280,7 @@
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                      </columnResizePolicy>
                   </TableView>
-                  <GridPane layoutX="565.0" prefHeight="669.0" prefWidth="512.0">
+                  <GridPane layoutX="599.0" prefHeight="669.0" prefWidth="478.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -337,9 +337,9 @@
                                  </VBox.margin>
                               </Label>
                               <Label alignment="CENTER" layoutX="10.0" layoutY="52.0" prefHeight="17.0" prefWidth="279.0" text="ID klienta" />
-                              <TextField fx:id="reservarionAddCustomerIDTextField" />
+                              <TextField fx:id="reservarionAddCustomerIDTextField" alignment="CENTER" />
                               <Label alignment="CENTER" layoutX="10.0" layoutY="43.0" prefHeight="17.0" prefWidth="279.0" text="ID sprzetu" />
-                              <TextField fx:id="reservationAddSkiEquIDTextField" />
+                              <TextField fx:id="reservationAddSkiEquIDTextField" alignment="CENTER" />
                               <Label alignment="CENTER" prefHeight="17.0" prefWidth="476.0" text="Staus rezerwacji" />
                               <ComboBox fx:id="reservationStatusAddComboBox" prefHeight="25.0" prefWidth="351.0" promptText="Select status" />
                               <Label alignment="CENTER" layoutX="10.0" layoutY="123.0" prefHeight="17.0" prefWidth="474.0" text="Status płatności" />
